--- a/standalone.html
+++ b/standalone.html
@@ -62,6 +62,7 @@
     ></script>
 
     <!-- Load our React component. -->
-    <script src="colorGame.js" defer type="text/babel"></script>
+    <script src="winner.js" defer type="text/babel"></script>
+    <script src="colorGame00.js" defer type="text/babel"></script>
   </body>
 </html>
